--- a/Hora+da+prática.ipynb
+++ b/Hora+da+prática.ipynb
@@ -545,12 +545,36 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# Lista gerada\n",
+        "lista = [16, 14, 63, 65, 17, 99, 70, 11, 20, 48, 79, 32, 17, 89, 12, 25, 66]\n",
+        "\n",
+        "# Lendo o tamanho, maior e menor número e soma, respectivamente, utilizando as built-in functions\n",
+        "tam = len(lista)\n",
+        "maior = max(lista)\n",
+        "menor = min(lista)\n",
+        "soma = sum(lista)\n",
+        "\n",
+        "# Exibindo o texto\n",
+        "print(f\"A lista possui {tam} números em que o maior número é {maior} e o menor número é {menor}. A soma dos valores pares presentes nela é igual a {soma}.\")"
+      ],
       "metadata": {
-        "id": "KrGD5Nl5a1dz"
+        "id": "KrGD5Nl5a1dz",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "311cf2f4-0a07-46a1-efdc-d1445b92fab7"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "A lista possui 17 números em que o maior número é 99 e o menor número é 11. A soma dos valores pares presentes nela é igual a 743.\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -572,12 +596,49 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# Requisitando o número\n",
+        "num = int(input(\"Digite um número inteiro de 1 a 10:\"))\n",
+        "\n",
+        "# Gerando a função tabuada()\n",
+        "def tabuada(numero: int):\n",
+        "  print(f'Tabuada do {numero}:')\n",
+        "  for i in range(11):\n",
+        "    resultado = numero * i\n",
+        "    print(f'{numero} x {i} = {resultado}')\n",
+        "\n",
+        "# lendo a tabuada do número escolhido\n",
+        "tabuada(num)"
+      ],
       "metadata": {
-        "id": "DxHuhb19a1d0"
+        "id": "DxHuhb19a1d0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "80d6c8dd-4561-42f0-ee72-f6dd57904cc5"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Digite um número inteiro de 1 a 10:4\n",
+            "Tabuada do 4:\n",
+            "4 x 0 = 0\n",
+            "4 x 1 = 4\n",
+            "4 x 2 = 8\n",
+            "4 x 3 = 12\n",
+            "4 x 4 = 16\n",
+            "4 x 5 = 20\n",
+            "4 x 6 = 24\n",
+            "4 x 7 = 28\n",
+            "4 x 8 = 32\n",
+            "4 x 9 = 36\n",
+            "4 x 10 = 40\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
