--- a/Hora+da+prática.ipynb
+++ b/Hora+da+prática.ipynb
@@ -658,12 +658,44 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# Lista gerada\n",
+        "lista = [97, 80, 94, 88, 80, 1, 16, 53, 62, 32, 24, 99]\n",
+        "\n",
+        "# declarando a lista de multiplos de 3 \n",
+        "mult_3 = []\n",
+        "# função para gerar uma lista dos múltiplos de 3 a partir de uma lista\n",
+        "def multiplo_3(lista: list) -> list:\n",
+        "  for i in range(len(lista)):\n",
+        "    # condição para um número ser múltiplo de 3\n",
+        "    if lista[i] % 3 == 0:\n",
+        "      mult_3.append(lista[i])\n",
+        "  return mult_3\n",
+        "\n",
+        "# retornando a lista gerada para a variável mult_3\n",
+        "mult_3 = multiplo_3(lista)\n",
+        "mult_3"
+      ],
       "metadata": {
-        "id": "kYrKxhd8a1d0"
+        "id": "kYrKxhd8a1d0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "0561765c-7a95-4e90-8f43-c28047cfc54c"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[24, 99]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 3
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -679,12 +711,37 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# Lista dos números\n",
+        "numeros = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
+        "\n",
+        "# Função lambda que eleva um número ao quadrado\n",
+        "quadrado = lambda x: x ** 2\n",
+        "\n",
+        "# Utilizando a função map() para aplicar a função lambda em cada número da lista\n",
+        "resultado = list(map(quadrado, numeros))\n",
+        "resultado "
+      ],
       "metadata": {
-        "id": "Iav68EpKa1d0"
+        "id": "Iav68EpKa1d0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "1fbfffd0-5295-4887-deb8-f64dca146241"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[1, 4, 9, 16, 25, 36, 49, 64, 81, 100]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 4
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -714,12 +771,46 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# declarando a lista de notas\n",
+        "notas = []\n",
+        "# laço for para pedir as 5 notas e armazená-las na lista notas\n",
+        "for i in range(1,6):\n",
+        "  nota = float(input(f\"Digite a {i}ª nota: \"))\n",
+        "  notas.append(nota)\n",
+        "\n",
+        "# Função para remover a maior e menor nota e retornar a média das notas restantes\n",
+        "def media(lista):\n",
+        "  lista.remove(max(lista))\n",
+        "  lista.remove(min(lista))\n",
+        "  return sum(lista) / len(lista)\n",
+        "\n",
+        "# Chamando a função e imprimindo a nota da(o) skatista\n",
+        "media = media(notas)\n",
+        "print(f\"Nota da manobra: {round(media, 1)}\") "
+      ],
       "metadata": {
-        "id": "1nbQ-hIRa1d0"
+        "id": "1nbQ-hIRa1d0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "c081b68d-815e-4011-db1b-9229b61e25e9"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Digite a 1ª nota: 5\n",
+            "Digite a 2ª nota: 6\n",
+            "Digite a 3ª nota: 7\n",
+            "Digite a 4ª nota: 8\n",
+            "Digite a 5ª nota: 9\n",
+            "Nota da manobra: 7.0\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -743,12 +834,50 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# declarando a lista de notas\n",
+        "notas = []\n",
+        "# laço for para pedir as 4 notas e armazená-las na lista notas\n",
+        "for i in range(1,5):\n",
+        "  nota = float(input(f\"Digite a {i}ª nota: \"))\n",
+        "  notas.append(nota)\n",
+        "\n",
+        "def cadastro(lista):\n",
+        "  maior = max(lista)\n",
+        "  menor = min(lista)\n",
+        "  media = sum(lista) / len(lista)\n",
+        "  if media >= 6:\n",
+        "    situacao = \"Aprovado(a)\"\n",
+        "  else:\n",
+        "    situacao = \"Reprovado(a)\"\n",
+        "\n",
+        "  return (media, maior, menor, situacao)\n",
+        "\n",
+        "media, maior, menor, situacao = cadastro(notas)\n",
+        "\n",
+        "print(f\"O(a) estudante obteve uma media de {media}, com a sua maior nota de {maior} pontos e a menor nota de {menor} pontos e foi {situacao}\")"
+      ],
       "metadata": {
-        "id": "5Bx-K65ya1d0"
+        "id": "5Bx-K65ya1d0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "113d615d-3498-41db-b348-aa5e6fb2dcab"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Digite a 1ª nota: 4\n",
+            "Digite a 2ª nota: 5\n",
+            "Digite a 3ª nota: 6\n",
+            "Digite a 4ª nota: 7\n",
+            "O(a) estudante obteve uma media de 5.5, com a sua maior nota de 7.0 pontos e a menor nota de 4.0 pontos e foi Reprovado(a)\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -776,12 +905,38 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# Nomes dos estudantes\n",
+        "nomes = [\"joão\", \"MaRia\", \"JOSÉ\"]\n",
+        "sobrenomes = [\"SILVA\", \"souza\", \"Tavares\"]\n",
+        "\n",
+        "# Função lambda que recebe duas listas e itera em cada uma concatenando seu nome e sobrenome\n",
+        "# na forma desejada\n",
+        "nome_completo = map(lambda nome, sobrenome: f'{nome.title()} {sobrenome.title()}', nomes, sobrenomes)\n",
+        "\n",
+        "# Leitura do objeto mapa(iterável)\n",
+        "for n in nome_completo:\n",
+        "  print(f'Nome completo: {n}')"
+      ],
       "metadata": {
-        "id": "SdPq27E-a1d0"
+        "id": "SdPq27E-a1d0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "a200cb5c-4036-4c80-dfa4-17fd292cbcc0"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Nome completo: João Silva\n",
+            "Nome completo: Maria Souza\n",
+            "Nome completo: José Tavares\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -814,12 +969,40 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "gols_marcados = [2, 1, 3, 1, 0]\n",
+        "gols_sofridos = [1, 2, 2, 1, 3]\n",
+        "\n",
+        "def calcula_pontos(gols_marcados, gols_sofridos):\n",
+        "  pontos = 0\n",
+        "  for i in range(len(gols_marcados)):\n",
+        "    if gols_marcados[i] > gols_sofridos[i]:\n",
+        "      pontos += 3\n",
+        "    elif gols_marcados[i] == gols_sofridos[i]:\n",
+        "      pontos += 1\n",
+        "  aprov = 100 * pontos / (len(gols_marcados) * 3)\n",
+        "  return (pontos, aprov)\n",
+        "\n",
+        "pontos, aprov = calcula_pontos(gols_marcados, gols_sofridos)\n",
+        "print(f\"A pontuação do time foi de {pontos} e seu aproveitamento foi de {round(aprov)}%\")"
+      ],
       "metadata": {
-        "id": "zxOwouhta1d0"
+        "id": "zxOwouhta1d0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "888dfe87-fc42-436e-983d-6834893b3261"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "A pontuação do time foi de 7 e seu aproveitamento foi de 47%\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -843,12 +1026,59 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "dias = int(input(\"Quantas diárias? \"))\n",
+        "cidade = input(\"Qual a cidade? [Salvador, Fortaleza, Natal ou Aracaju]: \")\n",
+        "distancias = [850, 800, 300, 550]\n",
+        "passeio = [200, 400, 250, 300]\n",
+        "km_l = 14\n",
+        "gasolina = 5\n",
+        "\n",
+        "def gasto_hotel(dias):\n",
+        "    return 150 * dias\n",
+        "\n",
+        "def gasto_gasolina(cidade):\n",
+        "    if cidade == \"Salvador\":\n",
+        "        return (2 * distancias[0] * gasolina) / km_l \n",
+        "    elif cidade == \"Fortaleza\":\n",
+        "        return (2 * distancias[1] * gasolina) / km_l \n",
+        "    elif cidade == \"Natal\":\n",
+        "        return (2 * distancias[2] * gasolina) / km_l \n",
+        "    elif cidade == \"Aracaju\":\n",
+        "        return (2 * distancias[3] * gasolina) / km_l \n",
+        "\n",
+        "def gasto_passeio(cidade, dias):\n",
+        "    if cidade==\"Salvador\":\n",
+        "        return passeio[0] * dias\n",
+        "    elif cidade==\"Fortaleza\":\n",
+        "        return passeio[1] * dias\n",
+        "    elif cidade==\"Natal\":\n",
+        "        return passeio[2] * dias \n",
+        "    elif cidade==\"Aracaju\":\n",
+        "        return passeio[3] * dias \n",
+        "\n",
+        "gastos = gasto_hotel(dias) + gasto_gasolina(cidade) + gasto_passeio(cidade, dias)\n",
+        "print(f\"Com base nos gastos definidos, uma viagem de {dias} dias para {cidade} saindo de Recife custaria {round(gastos, 2)} reais\")"
+      ],
       "metadata": {
-        "id": "VQyaLsnWa1d0"
+        "id": "VQyaLsnWa1d0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "e7f75cec-535e-4a22-8f9f-48f503673fbe"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Quantas diárias? 12\n",
+            "Qual a cidade? [Salvador, Fortaleza, Natal ou Aracaju]: Natal\n",
+            "Com base nos gastos definidos, uma viagem de 12 dias para Natal saindo de Recife custaria 5014.29 reais\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -867,12 +1097,35 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# Requisitando uma frase e separando-a pelos espaços. Usando replace para trocar\n",
+        "# pontuações por espaço.\n",
+        "frase = input(\"Digite uma frase: \")\n",
+        "frase = frase.replace(',',' ').replace('.',' ').replace('!',' ').replace('?',' ').split()\n",
+        "\n",
+        "# Filtrando a frase no formato de lista, passando para a lista tamanho\n",
+        "# apenas as palavras com 5 ou mais caracteres e imprimindo-a na tela\n",
+        "tamanho = list(filter(lambda x: len(x) >= 5, frase))\n",
+        "print(tamanho)"
+      ],
       "metadata": {
-        "id": "_WxPiZWtpWoX"
+        "id": "_WxPiZWtpWoX",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "6772e81d-4fe4-46c2-b167-86be20e97da9"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Digite uma frase: Aprender Python aqui na Alura é muito bom\"\n",
+            "['Aprender', 'Python', 'Alura', 'muito']\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
