--- a/Projeto+inicial+_+Python+para+DS.ipynb
+++ b/Projeto+inicial+_+Python+para+DS.ipynb
@@ -2753,7 +2753,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 21,
       "metadata": {
         "id": "RR5D3LvYAOUd"
       },
@@ -2764,7 +2764,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 22,
       "metadata": {
         "id": "J_atQRQdlpNe"
       },
@@ -2786,12 +2786,30 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 23,
       "metadata": {
-        "id": "G5CQqPkzQWT0"
+        "id": "G5CQqPkzQWT0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "e71dcdd0-030f-4e38-b20d-ca45fd3a584e"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[9.0, 7.3, 5.8, 6.7, 8.5]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 23
+        }
+      ],
+      "source": [
+        "medias = [round(media(nota),1) for nota in notas]\n",
+        "medias"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -2815,7 +2833,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 24,
       "metadata": {
         "id": "WhXegkP5DDMW"
       },
@@ -2827,13 +2845,30 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 25,
       "metadata": {
-        "id": "Lvfr10SIDSDN"
+        "id": "Lvfr10SIDSDN",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "01f83c9e-4210-4bec-f9ac-7eca6b7c2aed"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['João', 'Maria', 'José', 'Cláudia', 'Ana']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 25
+        }
+      ],
       "source": [
-        "# Gerando a lista de nomes (extraindo da tupla)\n"
+        "# Gerando a lista de nomes (extraindo da tupla)\n",
+        "nomes = [nome[0] for nome in nomes]\n",
+        "nomes\n"
       ]
     },
     {
@@ -2849,22 +2884,57 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 27,
       "metadata": {
-        "id": "TRqn0wMUg3s7"
+        "id": "TRqn0wMUg3s7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "82471775-e117-4b90-f83f-4a9969ebe169"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[('João', 9.0), ('Maria', 7.3), ('José', 5.8), ('Cláudia', 6.7), ('Ana', 8.5)]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 27
+        }
+      ],
+      "source": [
+        "estudantes = list(zip(nomes, medias))\n",
+        "estudantes"
+      ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 28,
       "metadata": {
-        "id": "T1ocZ1G0g3qC"
+        "id": "T1ocZ1G0g3qC",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "527fd097-8807-4cec-8cc8-3e6432fe7c4f"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['João', 'Ana']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 28
+        }
+      ],
       "source": [
-        "# Gerando a lista de pessoas candidatas a bolsa\n"
+        "# Gerando a lista de pessoas candidatas a bolsa\n",
+        "candidatos = [estudante[0] for estudante in estudantes if estudante[1]>=8.0]\n",
+        "candidatos\n"
       ]
     },
     {
