--- a/Projeto+inicial+_+Python+para+DS.ipynb
+++ b/Projeto+inicial+_+Python+para+DS.ipynb
@@ -4097,21 +4097,71 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 26,
       "metadata": {
-        "id": "lO8OCMRzSXQv"
+        "id": "lO8OCMRzSXQv",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "49cdcaf7-7370-40af-ffd8-185b387581ef"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "7.5\n",
+            "A consulta foi encerrada!\n"
+          ]
+        }
+      ],
+      "source": [
+        "try:\n",
+        "  notas = [6,7,8,9]\n",
+        "  resultado = media(notas)\n",
+        "except TypeError:\n",
+        "  print(\"Não foi possível calcular a média do(a) estudante. Só são aceitos valores numéricos!\" )\n",
+        "except ValueError as e:\n",
+        "  print(e)\n",
+        "else:\n",
+        "  print(resultado)\n",
+        "finally:\n",
+        "  print(\"A consulta foi encerrada!\")\n"
+      ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 27,
       "metadata": {
-        "id": "A-rA3l4hm4RA"
+        "id": "A-rA3l4hm4RA",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "bc2c0537-b755-4ca0-c95c-0e79610ff91d"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "A lista não pode possuir mais de 4 notas.\n",
+            "A consulta foi encerrada!\n"
+          ]
+        }
+      ],
+      "source": [
+        "try:\n",
+        "  notas = [6,7,8,9,8]\n",
+        "  resultado = media(notas)\n",
+        "except TypeError:\n",
+        "  print(\"Não foi possível calcular a média do(a) estudante. Só são aceitos valores numéricos!\" )\n",
+        "except ValueError as e:\n",
+        "  print(e)\n",
+        "else:\n",
+        "  print(resultado)\n",
+        "finally:\n",
+        "  print(\"A consulta foi encerrada!\")"
+      ]
     },
     {
       "cell_type": "code",
