--- a/Projeto+inicial+_+Python+para+DS.ipynb
+++ b/Projeto+inicial+_+Python+para+DS.ipynb
@@ -4165,12 +4165,37 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 28,
       "metadata": {
-        "id": "Jf3Sg5H-m4Za"
+        "id": "Jf3Sg5H-m4Za",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "40947f29-6184-4bec-f974-fe62c5145b9d"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Não foi possível calcular a média do(a) estudante. Só são aceitos valores numéricos!\n",
+            "A consulta foi encerrada!\n"
+          ]
+        }
+      ],
+      "source": [
+        "try:\n",
+        "  notas = [6,7,8,\"9\"]\n",
+        "  resultado = media(notas)\n",
+        "except TypeError:\n",
+        "  print(\"Não foi possível calcular a média do(a) estudante. Só são aceitos valores numéricos!\" )\n",
+        "except ValueError as e:\n",
+        "  print(e)\n",
+        "else:\n",
+        "  print(resultado)\n",
+        "finally:\n",
+        "  print(\"A consulta foi encerrada!\")"
+      ]
     }
   ],
   "metadata": {
