--- a/Hora+da+prática.ipynb
+++ b/Hora+da+prática.ipynb
@@ -1128,15 +1128,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "RNKCIcDJeBsX"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "source": [
         "## Aula 3 - Estrutura de dados compostas"
@@ -1170,12 +1161,40 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "lista_de_listas = [[4,6,5,9], [1,0,7,2], [3,4,1,8]]\n"
+      ],
       "metadata": {
-        "id": "P9dywp1xh3SU"
+        "id": "9CUwvBJn3NVD"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for lista in lista_de_listas:\n",
+        "  print(sum(lista))"
+      ],
+      "metadata": {
+        "id": "P9dywp1xh3SU",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "f0c72238-2dae-48e2-b9d8-469be5a022c1"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "24\n",
+            "10\n",
+            "16\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1193,12 +1212,40 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "lista_de_tuplas = [('Pedro', 1.74, 81), ('Júlia', 1.65, 67), ('Otávio', 1.81, 83)]\n"
+      ],
       "metadata": {
         "id": "S9EL1Bvjh3SU"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "lista = []\n",
+        "for tupla in lista_de_tuplas:\n",
+        "    lista.append(tupla[2])\n",
+        "print(lista)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "bIT2xjD-3ZSn",
+        "outputId": "519032d1-965f-44c5-d34f-04441739b10f"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[81, 67, 83]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1212,12 +1259,40 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "lista = ['Pedro', 'Júlia', 'Otávio', 'Eduardo']"
+      ],
       "metadata": {
         "id": "x3ckJThph3SU"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "lista_de_tuplas = []\n",
+        "for i in range(len(lista)):\n",
+        "    lista_de_tuplas.append((i, lista[i]))\n",
+        "print(lista_de_tuplas)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "3_WFGVqBJKhs",
+        "outputId": "af5a9d53-04cd-4781-c4dc-c38343d3a440"
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[(0, 'Pedro'), (1, 'Júlia'), (2, 'Otávio'), (3, 'Eduardo')]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1235,12 +1310,38 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "aluguel = [('Apartamento', 1700), ('Apartamento', 1400), ('Casa', 2150), ('Apartamento', 1900), ('Casa', 1100)]\n"
+      ],
       "metadata": {
         "id": "H1S8yT64h3SU"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "lista = [tupla[1] for tupla in aluguel if tupla[0]== 'Apartamento']\n",
+        "print(lista)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "yY9qqQPnJU52",
+        "outputId": "a867323b-d0cd-4434-8c64-eb2f50d5f52f"
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[1700, 1400, 1900]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1256,12 +1357,39 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "meses = ['Jan', 'Fev', 'Mar', 'Abr', 'Mai', 'Jun', 'Jul', 'Ago', 'Set', 'Out', 'Nov', 'Dez']\n",
+        "despesa = [860, 490, 1010, 780, 900, 630, 590, 770, 620, 560, 840, 360]"
+      ],
       "metadata": {
         "id": "y7c5ickkh3SV"
       },
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "dicionario = {meses[i]: despesa[i] for i in range(len(meses))}\n",
+        "print(dicionario)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "mTsdIsgeJjEa",
+        "outputId": "8a42a6ba-a2cc-4da5-8436-6a349df48428"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'Jan': 860, 'Fev': 490, 'Mar': 1010, 'Abr': 780, 'Mai': 900, 'Jun': 630, 'Jul': 590, 'Ago': 770, 'Set': 620, 'Out': 560, 'Nov': 840, 'Dez': 360}\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1289,12 +1417,38 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "vendas = [('2023', 4093), ('2021', 4320), ('2021', 5959), ('2022', 8883), ('2023', 9859), ('2022', 5141), ('2022', 7688), ('2022', 9544), ('2023', 4794), ('2021', 7178), ('2022', 3030), ('2021', 7471), ('2022', 4226), ('2022', 8190), ('2021', 9680), ('2022', 5616)]\n"
+      ],
       "metadata": {
         "id": "jQvbtw2sh3SV"
       },
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "filtro = [tupla[1] for tupla in vendas if tupla[0] == '2022' and tupla[1] > 6000]\n",
+        "print(filtro)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "BOj7JjYnJrr6",
+        "outputId": "2c3939ce-5e9b-4b46-f481-c1f3d69354bc"
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[8883, 7688, 9544, 8190]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1320,12 +1474,38 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "glicemia = [129, 82, 60, 97, 101, 65, 62, 167, 87, 53, 58, 92, 66, 120, 109, 62, 86, 96, 103, 88, 155, 52, 89, 73]\n"
+      ],
       "metadata": {
         "id": "cIDqBZrxh3SV"
       },
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "rotulos = [('Hipoglicemia', glicose) if glicose <= 70 else ('Normal', glicose) if glicose < 100 else ('Alterada', glicose) if glicose < 125 else ('Diabetes', glicose) for glicose in glicemia]\n",
+        "print(rotulos)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "U-1BfI8xJ7Mm",
+        "outputId": "876d3ef1-5784-445b-e049-cee2c632506c"
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[('Diabetes', 129), ('Normal', 82), ('Hipoglicemia', 60), ('Normal', 97), ('Alterada', 101), ('Hipoglicemia', 65), ('Hipoglicemia', 62), ('Diabetes', 167), ('Normal', 87), ('Hipoglicemia', 53), ('Hipoglicemia', 58), ('Normal', 92), ('Hipoglicemia', 66), ('Alterada', 120), ('Alterada', 109), ('Hipoglicemia', 62), ('Normal', 86), ('Normal', 96), ('Alterada', 103), ('Normal', 88), ('Diabetes', 155), ('Hipoglicemia', 52), ('Normal', 89), ('Normal', 73)]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1349,11 +1529,27 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "id = [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
+        "quantidade = [15, 12, 1, 15, 2, 11, 2, 12, 2, 4]\n",
+        "preco = [93.0, 102.0, 18.0, 41.0, 122.0, 14.0, 71.0, 48.0, 14.0, 144.0]"
+      ],
       "metadata": {
         "id": "XnmvwiIwh3SV"
       },
-      "execution_count": null,
+      "execution_count": 19,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "tabela = [('id', 'quantidade', 'preco', 'total')]\n",
+        "tabela += [(id[i], quantidade[i], preco[i], quantidade[i]*preco[i]) for i in range(len(id))]"
+      ],
+      "metadata": {
+        "id": "Kbs1tqPMKChO"
+      },
+      "execution_count": 26,
       "outputs": []
     },
     {
@@ -1376,12 +1572,50 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "estados = ['SP', 'ES', 'MG', 'MG', 'SP', 'MG', 'ES', 'ES', 'ES', 'SP', 'SP', 'MG', 'ES', 'SP', 'RJ', 'MG', 'RJ', 'SP', 'MG', 'SP', 'ES', 'SP', 'MG']\n"
+      ],
       "metadata": {
         "id": "qXU5UMUih3SV"
       },
-      "execution_count": null,
+      "execution_count": 27,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Armazenando os estados sem repetição de valor\n",
+        "estados_unicos = list(set(estados))\n",
+        "\n",
+        "# Criando uma lista de listas com valores repetidos de cada estado\n",
+        "lista_de_listas = []\n",
+        "for estado in estados_unicos:\n",
+        "    lista = [uf for uf in estados if uf == estado]\n",
+        "    lista_de_listas.append(lista)\n",
+        "print(lista_de_listas)\n",
+        "\n",
+        "# Criando um dicionário em que a chave é o nome de cada estado único e o valor é a contagem de elementos\n",
+        "contagem_valores = {estados_unicos[i]: len(lista_de_listas[i]) for i in range(len(estados_unicos))}\n",
+        "print(contagem_valores)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "MJ3GZbuwKnha",
+        "outputId": "8f4417bf-3ca9-4148-bae3-07f92d384a60"
+      },
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[['SP', 'SP', 'SP', 'SP', 'SP', 'SP', 'SP', 'SP'], ['ES', 'ES', 'ES', 'ES', 'ES', 'ES'], ['RJ', 'RJ'], ['MG', 'MG', 'MG', 'MG', 'MG', 'MG', 'MG']]\n",
+            "{'SP': 8, 'ES': 6, 'RJ': 2, 'MG': 7}\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1404,12 +1638,55 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "funcionarios = [('SP', 16), ('ES', 8), ('MG', 9), ('MG', 6), ('SP', 10), ('MG', 4), ('ES',9), ('ES', 7), ('ES', 12), ('SP', 7), ('SP', 11), ('MG',8), ('ES',8), ('SP',9), ('RJ', 13), ('MG', 5), ('RJ', 9), ('SP', 12), ('MG', 10), ('SP', 7), ('ES', 14), ('SP', 10), ('MG', 12)]\n"
+      ],
       "metadata": {
-        "id": "lq42ThQNh3SV"
+        "id": "UM1DHuzlK14u"
       },
-      "execution_count": null,
+      "execution_count": 29,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Armazenando os estados sem repetição de valor\n",
+        "estados_unicos = list(set([tupla[0] for tupla in funcionarios]))\n",
+        "\n",
+        "# Criando uma lista de listas com valores de funcionários de cada estado\n",
+        "lista_de_listas = []\n",
+        "for estado in estados_unicos:\n",
+        "    lista = [tupla[1] for tupla in funcionarios if tupla[0] == estado]\n",
+        "    lista_de_listas.append(lista)\n",
+        "print(lista_de_listas)\n",
+        "\n",
+        "# Criando um dicionário com dados agrupados de funcionário por estado\n",
+        "agrupamento_por_estado = {estados_unicos[i]: lista_de_listas[i] for i in range(len(estados_unicos))}\n",
+        "print(agrupamento_por_estado)\n",
+        "\n",
+        "# Criando um dicionário com a soma de funcionários por estado\n",
+        "soma_por_estado = {estados_unicos[i]: sum(lista_de_listas[i]) for i in range(len(estados_unicos))}\n",
+        "print(soma_por_estado)"
+      ],
+      "metadata": {
+        "id": "lq42ThQNh3SV",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "cd269431-f9d9-42c4-96a7-0d30d9077d8f"
+      },
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[16, 10, 7, 11, 9, 12, 7, 10], [8, 9, 7, 12, 8, 14], [13, 9], [9, 6, 4, 8, 5, 10, 12]]\n",
+            "{'SP': [16, 10, 7, 11, 9, 12, 7, 10], 'ES': [8, 9, 7, 12, 8, 14], 'RJ': [13, 9], 'MG': [9, 6, 4, 8, 5, 10, 12]}\n",
+            "{'SP': 82, 'ES': 58, 'RJ': 22, 'MG': 54}\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1444,12 +1721,32 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "try:\n",
+        "    numero_1 = float(input())\n",
+        "    numero_2 = float(input())\n",
+        "    divisao = numero_1 / numero_2\n",
+        "except Exception as e:\n",
+        "    print(type(e), f'Erro: {e}')"
+      ],
       "metadata": {
-        "id": "Zg1CLRTxjYgM"
+        "id": "Zg1CLRTxjYgM",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "0318cab0-2882-44e2-8853-704fa97d1398"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "3\n",
+            "3\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
