--- a/Hora+da+prática.ipynb
+++ b/Hora+da+prática.ipynb
@@ -1764,12 +1764,44 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "try:\n",
+        "    chave = input()\n",
+        "    valor = idades[chave]\n",
+        "except KeyError:\n",
+        "    print('Nome não encontrado')\n",
+        "else:\n",
+        "    print(valor)"
+      ],
       "metadata": {
-        "id": "mcTh-_tDjYgM"
+        "id": "mcTh-_tDjYgM",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 253
+        },
+        "outputId": "70393f90-383f-42f3-e451-a28cdd4bb95a"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "8\n"
+          ]
+        },
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-2-ffdac88bb304>\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[0mchave\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0minput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m     \u001b[0mvalor\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0midades\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mchave\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0;32mexcept\u001b[0m \u001b[0mKeyError\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Nome não encontrado'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'idades' is not defined"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1783,11 +1815,21 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "def converte_lista(lista):\n",
+        "    try:\n",
+        "        nova_lista = [float(elemento) for elemento in lista]\n",
+        "    except Exception as e:\n",
+        "        print(type(e), f'Erro: {e}')\n",
+        "    else:\n",
+        "        return nova_lista\n",
+        "    finally:\n",
+        "        print('Fim da execução da função')"
+      ],
       "metadata": {
         "id": "1oflR6ywjYgN"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
