--- a/Hora+da+prática.ipynb
+++ b/Hora+da+prática.ipynb
@@ -1864,11 +1864,38 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "lista1 = [4,6,7,9,10]\n",
+        "lista2 = [-4,6,8,7,9]\n",
+        "lista1 = [4,6,7,9,10,4]\n",
+        "lista2 = [-4,6,8,7,9]\n",
+        "lista1 = [4,6,7,9,'A']\n",
+        "lista2 = [-4,'E',8,7,9]\n"
+      ],
       "metadata": {
         "id": "iMjbUztBjYgN"
       },
-      "execution_count": null,
+      "execution_count": 7,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def soma_listas(lista1, lista2):\n",
+        "    try:\n",
+        "        if len(lista1) == len(lista2):\n",
+        "            dados = [(lista1[i], lista2[i], lista1[i]+lista2[i]) for i in range(len(lista1))]\n",
+        "        else:\n",
+        "            raise IndexError('A quantidade de elementos em cada lista é diferente.')\n",
+        "    except Exception as e:\n",
+        "        print(type(e), f'Erro: {e}')\n",
+        "    else:\n",
+        "        return dados  "
+      ],
+      "metadata": {
+        "id": "EAMw3ZOb6r39"
+      },
+      "execution_count": 6,
       "outputs": []
     },
     {
