--- a/Hora+da+prática.ipynb
+++ b/Hora+da+prática.ipynb
@@ -1946,35 +1946,86 @@
     {
       "cell_type": "code",
       "source": [
-        "# Função para correção das notas\n"
+        "# Função para correção das notas\n",
+        "gabarito = ['D', 'A', 'B', 'C', 'A']\n",
+        "\n",
+        "# Criando a função que recebe a lista de listas com as notas dos estudantes\n",
+        "def corretor(testes: list):\n",
+        "  pontuacoes = [] # criando a lista que receberá as pontuações caso a exceção não seja lançada\n",
+        "  try:\n",
+        "    for teste in testes:\n",
+        "      nota = 0 # variável que acumula a nota de cada estudante\n",
+        "      for i in range(len(teste)):\n",
+        "        if teste[i] not in ['A', 'B', 'C', 'D']: # Verificamos se temos uma alternativa valida\n",
+        "          raise ValueError(f'A alternativa {teste[i]} não é uma opção de alternativa válida')\n",
+        "        elif teste[i] == gabarito[i]: # Verificamos se as respostas são iguais e adicionamos à nota\n",
+        "          nota += 1\n",
+        "      pontuacoes.append(nota) # adicionamos a nota do(a) estudante na lista de pontuações\n",
+        "  except Exception as e:\n",
+        "    print(e)\n",
+        "  else:\n",
+        "    return pontuacoes # retornando a lista de pontuações se não lançarmos a exceção\n"
       ],
       "metadata": {
         "id": "n7AJhrMpjYgN"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "# Testando no exemplo que não lança exceção\n"
+        "# Testando no exemplo que não lança exceção\n",
+        "# Testando no exemplo que não lança exceção\n",
+        "testes_sem_ex = [['D', 'A', 'B', 'C', 'A'], ['C', 'A', 'A', 'C', 'A'], ['D', 'B', 'A', 'C', 'A']]\n",
+        "corretor(testes_sem_ex)\n"
       ],
       "metadata": {
-        "id": "o_05pMigo-tR"
+        "id": "o_05pMigo-tR",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "d395a8b8-0b8e-4f42-c2e5-ba9bbc45f09b"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[5, 3, 3]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 2
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [
-        "# Testando no exemplo que lança exceção\n"
+        "# Testando no exemplo que lança exceção\n",
+        "# Testando no exemplo que lança exceção\n",
+        "testes_com_ex = [['D', 'A', 'B', 'C', 'A'], ['C', 'A', 'A', 'E', 'A'], ['D', 'B', 'A', 'C', 'A']]\n",
+        "corretor(testes_com_ex)\n"
       ],
       "metadata": {
-        "id": "PWeHm6Fjo-at"
+        "id": "PWeHm6Fjo-at",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "158b7f35-19b4-4ac4-8d85-8f0d8c74089f"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "A alternativa E não é uma opção de alternativa válida\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
