--- a/Hora+da+prática.ipynb
+++ b/Hora+da+prática.ipynb
@@ -2062,35 +2062,84 @@
     {
       "cell_type": "code",
       "source": [
-        "# criando a função que recebe a lista de palavras\n"
+        "# criando a função que recebe a lista de palavras\n",
+        "def avalia_texto(texto: list):\n",
+        "    for palavra in texto: # for para iterar por cada palavra\n",
+        "        if (',' or '.' or '!' or'?') in palavra: # testando se a palavra possui alguma pontuação\n",
+        "            raise ValueError(f'O texto apresenta pontuações na palavra \"{palavra}\".')\n",
+        "    return \"Texto já tratado!\" # retornando a verificação se não lançada a exceção "
       ],
       "metadata": {
         "id": "gxVg1sc_xACI"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "# Testando no exemplo que não lança exceção\n"
+        "# Testando no exemplo que não lança exceção\n",
+        "lista_tratada = ['Python', 'é', 'uma', 'linguagem', 'de', 'programação', 'poderosa', 'versátil',\n",
+        "                  'e', 'fácil', 'de', 'aprender', 'utilizada', 'em', 'diversos', 'campos', 'desde',\n",
+        "                  'análise', 'de', 'dados', 'até', 'inteligência', 'artificial']\n",
+        "\n",
+        "try:\n",
+        "  avaliacao = avalia_texto(lista_tratada)\n",
+        "except Exception as e:\n",
+        "  print(e)\n",
+        "else:\n",
+        "  print(avaliacao)"
       ],
       "metadata": {
-        "id": "gDvOq79slmlJ"
+        "id": "gDvOq79slmlJ",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "9a8e7b09-2c74-4621-fbeb-9c83ad42ec17"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Texto já tratado!\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [
-        "# Testando no exemplo que lança exceção\n"
+        "# Testando no exemplo que lança exceção\n",
+        "lista_nao_tratada = ['Python', 'é', 'uma', 'linguagem', 'de', 'programação', 'poderosa,', 'versátil',\n",
+        "                  'e', 'fácil,', 'de', 'aprender', 'utilizada', 'em', 'diversos', 'campos,', 'desde',\n",
+        "                  'análise', 'de', 'dados', 'até', 'inteligência', 'artificial!']\n",
+        "\n",
+        "try:\n",
+        "  avaliacao = avalia_texto(lista_nao_tratada)\n",
+        "except Exception as e:\n",
+        "  print(e)\n",
+        "else:\n",
+        "  print(avaliacao)"
       ],
       "metadata": {
-        "id": "PQADJf42woaw"
+        "id": "PQADJf42woaw",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "abb82472-4ba6-454d-e1c8-e15a523b83da"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "O texto apresenta pontuações na palavra \"poderosa,\".\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
