--- a/Hora+da+prática.ipynb
+++ b/Hora+da+prática.ipynb
@@ -2142,6 +2142,32 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "dia = 15\n",
+        "mes = 10\n",
+        "ano = 2015\n",
+        "print(dia, mes, ano, sep=\"/\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "aeFFmKznibH0",
+        "outputId": "9b0ba26b-3224-48df-d8b2-0021d4df10d4"
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "15/10/2015\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "#### Questão 7\n",
